# wl-whiskers-palette-extension

./: Cargo.toml  README.md  extension  linux-extension  manifest.json
src/: main.rs
src/icons/: mod.rs
src/results/: mod.rs
