[package]
name = "whiskers-palette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs.git" }
whiskers_palette_rs = { git = "https://github.com/Whiskers-Color-Scheme/whiskers-palette-rs" }
fuzzy-matcher = "0.3.7"